# elysia_seed

./: .gitignore  AGENTS.md  CONTRIBUTING.md  EVALUATION_AND_ROADMAP.md  LICENSE  README.md  SYSTEM_MAP.md  create_genesis_seed.py  create_sharing_package.py  genesis.py  interactive_launcher.py  pyproject.toml  setup.py  start.bat  start.sh  verify_seed.py  verify_unification.py
docs/: ASI_MANIFESTO.md  BRANCH_CLEANUP_GUIDE.md  CORE_TECHNOLOGIES_INTEGRATION.md  DEEP_BLUEPRINT.md  EASY_START.md  FLUCTLIGHT_ANALYSIS.md  HYPERSPHERE_ROTOR_COMPARISON_KR.md  INTERNALIZATION_PRINCIPLES.md  PHASE_RECONSTRUCTION_BLUEPRINT_KR.md  PHILOSOPHY_OF_LACK_KR.md  PROJECT_SELF_EVALUATION.md  PROMPT_TEMPLATES.md  SYSTEM_MAP.md  UNIFIED_CONSCIOUSNESS_BLUEPRINT.md  USAGE_GUIDE.md  USER_GUIDE.md  character_pool.json  core_technologies_quickstart.md  local_llm_integration.md
elysia_core/: README.md  __init__.py  emotional_palette.py  hippocampus.py  hyper_qubit.py  identity.py  inner_monologue.py  integration.py  local_llm.py  perception.py  resonance_engine.py  soul.py  thought.py  wave.py
elysia_engine/: __init__.py  adapter.py  config.py  consciousness.py  controller.py  decoupled_consciousness.py  dream.py  entities.py  ether.py  evaluation.py  exceptions.py  hypersphere.py  logging_config.py  math_utils.py  natural_language.py  oracle.py  physics.py  quantum.py  spacetime_nourishment.py  storyteller.py  systems.py  tensor.py  tensor_coil.py  thermodynamics.py  topology.py  world.py  yggdrasil.py
elysia_light/: AGENTS.md  CONTRIBUTING.md  README.md  SYSTEM_MAP.md  requirements.txt  (+2 more)
(+201 files in other folders)
