[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "elysia-engine"
version = "0.1.0"
description = "Fractal consciousness engine core"
readme = "README.md"
authors = [{ name = "Elysia Engine" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["black", "mypy", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["elysia_engine*", "examples", "docs"]
